insights/static/css/main.css
/* ... */
.code-block {
  padding: 0 16px;
  margin-top: 24px;
  background-color: hsl(var(--base-hsl), 0.03);
  border: 1px solid hsl(var(--base-hsl), 0.1); }
  .code-block--wrap pre, .code-block--wrap code {
    white-space: pre-wrap; }

.hljs.bash {
  background-color: transparent !important; }

.cookie-consent {
  padding-top: 0 !important;
  width: 450px;
  height: 325px;
  position: fixed !important;
  bottom: 0;
  left: 0;
  background: #f9e1d3 !important;
  z-index: 99; }

.dropdown-filter {
  display: flex;
  align-items: center;
  flex-wrap: wrap; }
  @media (min-width: 36em) {
    .dropdown-filter {
      flex-wrap: nowrap; } }
  .dropdown-filter__label {
    flex-shrink: 0;
    align-self: flex-start;
    font-size: 16px;
    font-weight: 700;
    margin-top: 12px;
    margin-right: 10px; }
  .dropdown-filter__select {
    font-weight: 400;
    font-size: 16px;
    padding: 2px 4px; }

.export-data-button:hover [class*=background-fill1], .export-data-button:focus [class*=background-fill1] {
  fill: #2e666b; }

.export-data-button:hover [class*=background-fill2], .export-data-button:focus [class*=background-fill2] {
  fill: white; }

.filter {
  --filter-hsl: var(--base-hsl);
  --filter-text-hsl: var(--base-hsl);
  color: hsl(var(--filter-text-hsl), 1);
  border: 1px solid hsl(var(--filter-hsl), 1);
  display: inline-block;
  border-radius: 24px;
  font-size: 1rem;
  padding: 4px 24px 6px;
  font-weight: 600;
  letter-spacing: .3px; }
  .filter:hover {
    cursor: pointer;
    background-color: hsl(var(--filter-hsl), 1);
    color: hsl(var(--white-hsl), 1); }
  .filter.filter--data-wrangling:hover {
    --filter-hsl: var(--teal-hsl); }
  .filter.filter--data-literacy:hover {
    --filter-hsl: var(--orange-hsl); }
  .filter.filter--human-centered-design:hover {
    --filter-hsl: var(--red-hsl); }

.filter--selected {
  cursor: pointer;
  color: hsl(var(--white-hsl), 1);
  background-color: hsl(var(--filter-hsl), 1); }
  .filter--selected.filter--data-wrangling {
    --filter-hsl: var(--teal-hsl); }
  .filter--selected.filter--data-literacy {
    --filter-hsl: var(--orange-hsl); }
  .filter--selected.filter--human-centered-design {
    --filter-hsl: var(--red-hsl); }

.filter--data-wrangling {
  --filter-text-hsl: var(--teal-dark-hsl);
  --filter-hsl: var(--teal-hsl); }

.filter--data-literacy {
  --filter-text-hsl: var(--orange-dark-hsl);
  --filter-hsl: var(--orange-hsl); }

.filter--human-centered-design {
  --filter-hsl: var(--red-hsl);
  --filter-text-hsl: var(--red-hsl); }

.icon {
  --icon-color: var(--color-teal);
  display: inline-block; }
  .icon__overlaid-text {
    font-size: 12px;
    font-weight: 700;
    color: white;
    background: var(--icon-color);
    justify-content: center;
    padding: 2px;
    border-radius: 2px;
    min-width: 4rem;
    vertical-align: middle; }
  .icon__mat-icon {
    font-size: 24px;
    vertical-align: bottom; }
  .icon__mat-icon {
    color: var(--icon-color); }

.page-title {
  font-weight: 500;
  font-size: 35px;
  text-align: center;
  margin-bottom: 10px; }
  .page-title__id {
    display: block;
    text-align: center;
    margin-bottom: 38px; }
    .page-title__id a {
      font-size: 24px;
      font-weight: 400;
      text-decoration: underline; }

.pager {
  font-size: 16px;
  font-weight: 400;
  border: 1px solid #2e666b;
  display: inline-block; }
  .pager ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    padding: 8px 14px;
    flex-wrap: wrap; }
    @media (min-width: 36em) {
      .pager ul {
        padding: 12px 18px; } }
  .pager__item a {
    display: block; }
    .pager__item a:hover svg {
      stroke: #DE6E26; }
  .pager__item--first {
    text-decoration: underline;
    margin-right: 8px; }
    @media (min-width: 36em) {
      .pager__item--first {
        margin-right: 18px; } }
  .pager__item--prev {
    margin-right: 8px; }
    @media (min-width: 36em) {
      .pager__item--prev {
        margin-right: 20px; } }
    .pager__item--prev a {
      padding: 0 6px; }
      .pager__item--prev a:hover svg {
        stroke: #DE6E26; }
  .pager__item--ellipsis {
    padding: 0 6px; }
    @media (min-width: 36em) {
      .pager__item--ellipsis {
        padding: 0 12px; } }
  .pager__item--page {
    margin: 0 4px; }
    .pager__item--page a {
      padding: 6px; }
      .pager__item--page a.active {
        font-weight: bold; }
      .pager__item--page a:hover {
        text-decoration: dotted underline; }
  .pager__item--next {
    margin-left: 8px; }
    @media (min-width: 36em) {
      .pager__item--next {
        margin-left: 20px; } }
    .pager__item--next a {
      padding: 0 6px; }
      .pager__item--next a:hover svg {
        stroke: #DE6E26; }
  .pager__item--last {
    text-decoration: underline;
    margin-left: 8px; }
    @media (min-width: 36em) {
      .pager__item--last {
        margin-left: 18px; } }

.radio-buttons {
  display: flex;
  flex-wrap: wrap; }
  .radio-buttons__group {
    margin-right: 12px; }
    .radio-buttons__group:last-of-type {
      margin-right: 0; }
  .radio-buttons__button {
    color: #153634;
    font-size: 16px;
    font-weight: 400;
    padding: 4px;
    border-radius: 3px;
    border: 1px solid #153634; }
    .radio-buttons__button:hover {
      cursor: pointer; }
    .radio-buttons__button:focus {
      outline: 1px dashed red; }
  .radio-buttons input[type="radio"]:checked ~ .radio-buttons__button {
    background: #153634;
    color: white; }
  .radio-buttons input[type="radio"]:focus ~ .radio-buttons__button {
    outline: 1px dashed #DE6E26;
    outline-offset: -2px; }

.results-title {
  font-weight: 400;
  font-size: 24px; }
  .results-title__subtitle {
    font-size: 17px; }

.search-summary-description {
  font-weight: bold;
  font-size: 18px; }

.separator-light {
  border-width: 0;
  border-top: solid 1px hsl(var(--gray-30-hsl), 1);
  margin: 1rem 0;
  height: 0; }

.spacer-1 {
  padding-bottom: 8px; }
/* ... */

